--- a/src/app/non-secure/features-list/features-list.component.html
+++ b/src/app/non-secure/features-list/features-list.component.html
@@ -3,6 +3,34 @@
     <div class="row justify-content-center">
         <div class="col">
 
+            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.4</span> - 3rd August 2021</h5>
+            <ul class="list-unstyled mt-3">
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i><strong>No more</strong> negative points (kind of)!</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Introduced survival points concept.</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Improved sign-in and sign-up flow for social users.</li>
+            </ul>
+
+        </div>
+    </div>
+
+
+    <div class="row justify-content-center">
+        <div class="col">
+
+            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.3</span> - 31th July 2021</h5>
+            <ul class="list-unstyled mt-3">
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Field owners can run multiple games from a single profile.</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Weekly/Monthly leaderboards are available.</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Bug fixes and other minor improvements.</li>
+            </ul>
+
+        </div>
+    </div>
+
+
+    <div class="row justify-content-center">
+        <div class="col">
+
             <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.2</span> - 15th July 2021</h5>
             <ul class="list-unstyled mt-3">
                 <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Replay games in game history.</li>
@@ -12,6 +40,7 @@
 
         </div>
     </div>
+
 
     <div class="row justify-content-center">
         <div class="col">
@@ -26,6 +55,7 @@
         </div>
     </div>
 
+
     <div class="row justify-content-center">
         <div class="col">
 
@@ -36,6 +66,7 @@
 
         </div>
     </div>
+
 
     <div class="row">
       <div class="col">
