--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,14 +9,10 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.row {
-  padding: 0 1rem;
+.btn:hover {
+    transform: scale(1.05);
 }
 
-.btn:hover, li.nav-item:hover {
-    transform: scale(1.08);
-}
-
-.btn:active, li.nav-item:active {
-    transform: scale(0.92);
+.btn:active {
+    transform: scale(0.95);
 }
