--- a/src/app/non-secure/how-to-use/how-to-use.component.scss
+++ b/src/app/non-secure/how-to-use/how-to-use.component.scss
@@ -1,6 +1,9 @@
 
 @import "../../../assets/libs/font-awesome-4.7.0/scss/font-awesome.scss";
 
+.panel-panel-title{
+    display: none !important;
+}
 li {
   margin: 0.5rem 0 0.5rem 0;
 }
