--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
 
-    <div class="col-sm-6 d-flex">
+    <div class="col my-2">
 
       <div class="card">
 
@@ -33,15 +33,12 @@
 
     </div>
 
-    <div class="col-sm-6">
+    <div class="col my-2">
 
-          <div class="card">
+          <div class="row mx-0">
 
-                <div class="card-header">
-                <h2>Combined Game Stats</h2>
-                </div>
+                <h2 class="header">Combined Game Stats</h2>
 
-                <div class="card-body">
                   <ngx-charts-advanced-pie-chart
                     [scheme]="colorScheme"
                     [results]="pieData"
@@ -49,28 +46,25 @@
                     (activate)="onActivate($event)"
                     (deactivate)="onDeactivate($event)">
                   </ngx-charts-advanced-pie-chart>
-                </div>
+
+          </div>
 
 
-          <div class="card">
+          <div class="row mx-0">
 
-                <div class="card-header">
-                <h2>Historical Game Stats</h2>
-                </div>
+                <h2 class="header">Historical Game Stats</h2>
 
-                <div class="card-body">
                   <ngx-charts-area-chart-stacked
                     [scheme]="colorScheme"
-                    [legend]="true"
+                    [legend]="false"
                     [showXAxisLabel]="false"
                     [showYAxisLabel]="false"
                     [xAxis]="false"
-                    [yAxis]="true"
+                    [yAxis]="false"
                     [timeline]="true"
                     [results]="areaData"
                     (select)="onSelect($event)">
                   </ngx-charts-area-chart-stacked>
-                </div>
 
           </div>
 
